logs/fallback_log_20260213.log
2026-02-13 00:35:04,365 - INFO - Action Extraction Prompt Length: 1518
2026-02-13 00:35:04,365 - INFO - Agent Information: deepseek-v3
2026-02-13 00:35:16,803 - INFO - LLM Response Code: 200
2026-02-13 00:35:16,804 - INFO - W-8 LLM 响应内容: {
    "actions": [
        {
            "id": "action_20260209175209_1",
            "action": "调节音量",
            "descriptions": {
                "event_participants": "Speaker 2",
               ...
2026-02-13 00:35:18,647 - INFO - LLM Response Code: 200
2026-02-13 00:35:18,647 - INFO - W-8 LLM 响应内容: {
  "worker_type": "unknown",
  "reason": "当前明确定义的workers均无法处理此类需求",
  "confidence": 0.0
}...
2026-02-13 00:35:18,953 - INFO - LLM Response Code: 200
2026-02-13 00:35:18,954 - INFO - W-8 LLM 响应内容: {
  "worker_type": "TextGenerationWorker",
  "reason": "用户请求明确提到'文本生成'，且TextGenerationWorker的能力定义中包含'创作文本内容'等与文本生成相关的功能",
  "confidence": 1.0
}...
2026-02-13 00:35:19,156 - INFO - LLM Response Code: 200
2026-02-13 00:35:19,156 - INFO - W-8 LLM 响应内容: {
  "worker_type": "MemoExtractionWorker",
  "reason": "用户请求涉及'委托任务'，属于MemoExtractionWorker的能力范围，且其关键词和输入模式均匹配",
  "confidence": 0.9
}...
2026-02-13 00:36:00,026 - INFO - LLM Response Code: 200
2026-02-13 00:36:00,029 - INFO - W-8 LLM 响应内容: {
    "prompt": [
        {
            "identity": "环境调节助手，负责根据用户需求调整环境参数（如音量、光线等）以优化工作或休息环境",
            "input_data": {
                "用户需求": "Speaker 2要求将音乐调小一点，核心目的是为了准备明天的会议",
               ...
2026-02-13 00:36:00,039 - ERROR - W-8 LLM 调用异常 (尝试 1/3): invalid character '：' (U+FF1A) (<unknown>, line 21)
Traceback (most recent call last):
  File "/home/leoli/Downloads_for_ai/Programs/System2.0/utils/load_selector.py", line 58, in call_llm_dashscope
    result = ast.literal_eval(cleaned_result)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/leoli/anaconda3/envs/langchain/lib/python3.11/ast.py", line 64, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/leoli/anaconda3/envs/langchain/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 21
    补充说明：
        ^
SyntaxError: invalid character '：' (U+FF1A)
2026-02-13 00:36:10,261 - INFO - LLM Response Code: 200
2026-02-13 00:36:10,261 - INFO - W-8 LLM 响应内容: {
    "prompt": [
        {
            "identity": "环境调节助手，负责根据用户需求调整环境音量以适应当前任务需求",
            "input_data": {
                "用户需求": "Speaker 2要求将音乐调小一点，核心目的是为了准备明天的会议",
                "用户意见": "...
2026-02-13 00:36:13,677 - INFO - LLM Response Code: 200
2026-02-13 00:36:13,677 - INFO - W-8 LLM 响应内容: {
    "content": "春风轻拂绿意浓，\n百花争艳映晴空。\n溪水潺潺歌不断，\n燕子归来舞东风。\n\n柳枝摇曳拂面柔，\n桃李芬芳醉心头。\n最是一年春好处，\n人间万象焕新容。",
    "word_count": 56,
    "confidence": 0.9
}...
2026-02-13 00:36:27,357 - INFO - LLM Response Code: 200
2026-02-13 00:36:27,357 - INFO - W-8 LLM 响应内容: {
    "content": "春天把阳光揉碎成金箔\n撒在解冻的河床上\n柳枝是绿色的逗号\n在风里写着未完的诗行\n\n樱花突然集体叛逃\n粉色的雪落满人行道\n孩子们用风筝线\n丈量天空的高度\n\n泥土翻身时打了个哈欠\n蚯蚓在底下修改\n关于生长的草稿",
    "word_count": 76,
    "confidence": 0.85
}...
2026-02-13 00:36:34,320 - INFO - LLM Response Code: 200
2026-02-13 00:36:34,321 - INFO - W-8 LLM 响应内容: {
    "item": "Speaker 3明天要去找小王，让他帮忙做一个PPT，核心目的是为了完成PPT制作。委托对象：小王。",
    "confidence": 0.9
}...
2026-02-13 00:36:50,241 - INFO - LLM Response Code: 200
2026-02-13 00:36:50,241 - INFO - W-8 LLM 响应内容: {
  "action_type": "调节音量",
  "volume_adjustment": "调小",
  "purpose": "准备明天的会议",
  "completion_status": "已完成"
}...
2026-02-13 00:40:28,356 - INFO - Action Extraction Prompt Length: 1518
2026-02-13 00:40:28,356 - INFO - Agent Information: deepseek-v3
2026-02-13 00:40:39,977 - INFO - LLM Response Code: 200
2026-02-13 00:40:39,977 - INFO - W-8 LLM 响应内容: {
    "actions": [
        {
            "id": "action_20260209175209_1",
            "action": "调节音量",
            "descriptions": {
                "event_participants": "Speaker 2",
               ...
2026-02-13 00:40:41,348 - INFO - LLM Response Code: 200
2026-02-13 00:40:41,349 - INFO - W-8 LLM 响应内容: {
  "worker_type": "unknown",
  "reason": "当前明确定义的workers均无法处理此类需求",
  "confidence": 1.0
}...
2026-02-13 00:40:42,129 - INFO - LLM Response Code: 200
2026-02-13 00:40:42,129 - INFO - W-8 LLM 响应内容: {
  "worker_type": "TextGenerationWorker",
  "reason": "用户请求涉及文本生成，TextGenerationWorker具备创作文本内容、生成教程步骤等能力，与用户需求高度匹配",
  "confidence": 0.95
}...
2026-02-13 00:40:42,640 - INFO - LLM Response Code: 200
2026-02-13 00:40:42,641 - INFO - W-8 LLM 响应内容: {
  "worker_type": "MemoExtractionWorker",
  "reason": "用户请求包含关键词'委托'，且MemoExtractionWorker的能力定义中明确包含'委托任务分配'功能，其关键词列表和输入模式均匹配该请求",
  "confidence": 0.95
}...
2026-02-13 00:41:43,671 - INFO - LLM Response Code: 200
2026-02-13 00:41:43,671 - INFO - W-8 LLM 响应内容: {
    "prompt": [
        {
            "identity": "音量调节助手，负责根据用户需求调整设备音量",
            "input_data": {
                "用户需求": "Speaker 2要求将音乐调小一点，以便为明天的会议做准备",
                "用户意见": "None"
      ...
2026-02-13 00:41:46,638 - INFO - LLM Response Code: 200
2026-02-13 00:41:46,639 - INFO - W-8 LLM 响应内容: {
    "content": "春风轻拂绿柳梢，\n细雨润物静悄悄。\n花开满园争艳色，\n燕语莺啼乐逍遥。\n\n溪水潺潺映碧空，\n纸鸢翩翩舞晴风。\n最是一年春好处，\n踏青赏景意无穷。",
    "word_count": 56,
    "confidence": 0.9
}...
2026-02-13 00:43:08,301 - INFO - LLM Response Code: 200
2026-02-13 00:43:08,301 - INFO - W-8 LLM 响应内容: {
    "content": "春天踮着脚尖走来时\n柳枝就绿成了水彩画\n\n雨滴在窗玻璃上写诗\n每个标点都闪着嫩芽\n\n孩子们把风筝抛向云端\n线轴上缠满阳光的呓语\n\n忽然整个城市开始发芽\n连地铁站都长出蒲公英",
    "word_count": 62,
    "confidence": 0.95
}...
2026-02-13 00:43:28,935 - INFO - LLM Response Code: 200
2026-02-13 00:43:28,935 - INFO - W-8 LLM 响应内容: {
    "item": "Speaker 3明天要去找小王，让他帮忙做一个PPT。委托对象：小王。",
    "confidence": 1.0
}...
2026-02-13 00:43:32,519 - INFO - LLM Response Code: 200
2026-02-13 00:43:32,519 - INFO - W-8 LLM 响应内容: {'action_type': '调小音量', 'volume_level': '降低30%', 'target_device': 'Speaker 2', 'execution_time': '2026-02-10 下午', 'confidence': 1.0}...
2026-02-13 15:07:23,551 - INFO - Action Extraction Prompt Length: 1518
2026-02-13 15:07:23,551 - INFO - Agent Information: deepseek-v3
2026-02-13 15:07:31,728 - INFO - LLM Response Code: 200
2026-02-13 15:07:31,728 - INFO - W-8 LLM 响应内容: {
    "actions": [
        {
            "id": "action_20260209175209_1",
            "action": "调节音量",
            "descriptions": {
                "event_participants": "Speaker 2",
               ...
2026-02-13 15:07:33,574 - INFO - LLM Response Code: 200
2026-02-13 15:07:33,574 - INFO - W-8 LLM 响应内容: {
  "worker_type": "TextGenerationWorker",
  "reason": "用户请求涉及文本生成，与TextGenerationWorker的能力定义相匹配",
  "confidence": 0.9
}...
2026-02-13 15:07:33,903 - INFO - LLM Response Code: 200
2026-02-13 15:07:33,903 - INFO - W-8 LLM 响应内容: {
  "worker_type": "unknown",
  "reason": "当前明确定义的workers均无法处理此类需求",
  "confidence": 0.0
}...
2026-02-13 15:07:33,906 - INFO - LLM Response Code: 200
2026-02-13 15:07:33,906 - INFO - W-8 LLM 响应内容: {
  "worker_type": "MemoExtractionWorker",
  "reason": "用户请求包含关键词'委托'，且MemoExtractionWorker的能力定义中明确包含'委托任务分配'功能，其keywords和input_patterns也匹配该请求",
  "confidence": 0.95
}...
2026-02-13 15:07:46,472 - INFO - LLM Response Code: 200
2026-02-13 15:07:46,474 - INFO - W-8 LLM 响应内容: {
    "prompt": [
        {
            "identity": "环境调节助手，专门负责处理用户对音频、光线等环境因素的调节需求",
            "input_data": {
                "用户需求": "Speaker 2要求将音乐调小一点，以便准备明天的会议",
                "用户意见": "None...
2026-02-13 15:07:50,274 - INFO - LLM Response Code: 200
2026-02-13 15:07:50,275 - INFO - W-8 LLM 响应内容: {
    "content": "春风轻拂绿意浓，\n百花争艳映晴空。\n溪水潺潺歌欢畅，\n蝶舞蜂飞乐无穷。\n\n柳枝摇曳迎朝露，\n燕子归来筑巢忙。\n大地回春生机盎，\n人间处处好风光。",
    "word_count": 56,
    "confidence": 0.9
}...
2026-02-13 15:10:20,547 - INFO - LLM Response Code: 200
2026-02-13 15:10:20,547 - INFO - W-8 LLM 响应内容: {
    "item": "Speaker 3明天要去找小王，委托对象：小王，核心目的：让小王帮忙做一个PPT。",
    "confidence": 1.0
}...
2026-02-13 15:10:22,303 - INFO - LLM Response Code: 200
2026-02-13 15:10:22,303 - INFO - W-8 LLM 响应内容: {'action_type': '调节音量', 'device_id': 'Speaker 2', 'volume_level': '逐步调小', 'success': '已完成', 'confidence': 1.0}...
